tests/rosetta/transpiler/rb/call-an-object-method-2.rb
# Generated by Mochi transpiler v0.10.40 on 2025-07-25 20:48 +0700

def _add(a, b)
  if a.is_a?(Array) && b.is_a?(String)
    a.join + b
  elsif a.is_a?(String) && b.is_a?(Array)
    a + b.join
  else
    a + b
  end
end


def _padStart(s, len, ch)
  s.rjust(len, ch)
end

def newFactory()
  sn = 0
  _New = ->() {
    sn = _add(sn, 1)
    b = Box.new(secret: sn)
    if sn == 1
      b["Contents"] = "rabbit"
    else
      if sn == 2
        b["Contents"] = "rock"
      end
    end
    return b
  }
  _Count = ->() {
    return sn
  }
  return [_New, _Count]
end
$funcs = newFactory()
$New = $funcs[0]
$Count = $funcs[1]
Box = Struct.new(:Contents, :secret, keyword_init: true) do
  def TellSecret()
    return secret
  end
end
